--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>test-suites/ChromeRun.xml</suiteXmlFile>
+						<suiteXmlFile>test-suites/FirefoxRun.xml</suiteXmlFile>
+						<suiteXmlFile>test-suites/IERun.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
